tang-aks/tang-spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tang-spring-deployment
  namespace: maybetang
  labels:
    app: tang-spring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tang-spring
  template:
    metadata:
      labels:
        app: tang-spring
        azure.workload.identity/use: 'true'
    spec:
      serviceAccountName: tang-service-account 
      volumes:
        - name: tang-secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: tang-secret-provider
      containers:
        - name: tang-spring
          image: enablementacrnonprod.azurecr.io/tang-spring-image:2.6
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: tang-secrets-store-inline
              readOnly: true
              mountPath: /mnt/secrets-store
---
apiVersion: v1
kind: Service
metadata:
  name: tang-spring-service
  namespace: maybetang
spec:
  type: NodePort
  selector:
    app: tang-spring
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30200
